--- a/site/_includes/layouts/baselayout.njk
+++ b/site/_includes/layouts/baselayout.njk
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap w/ Webpack</title>
+    <link href="main.css" rel="stylesheet">
   </head>
 
 
@@ -18,6 +19,7 @@
   <main> 
     {{ content | safe }}
   </main> 
+  <script src="main.js"></script>
 
 </body> 
 </html>
