added todo, header, footer, eslint and cleaned a bit up

--- a/site/_includes/layouts/baselayout.njk
+++ b/site/_includes/layouts/baselayout.njk
@@ -3,23 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap w/ Webpack</title>
+    <title>Digital Sven</title>
     <link href="main.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
   </head>
-
-
-
-<body> 
-
-    <div class="container py-4 px-3 mx-auto">
-      <h1>Hello, Bootstrap and Webpack!</h1>
-      <button class="btn btn-primary">Primary button</button>
-    </div>
-
-  <main> 
-    {{ content | safe }}
-  </main> 
+<body>
+  {{ content | safe }}  
   <script src="main.js"></script>
-
 </body> 
 </html>
