added global vars

--- a/site/_includes/components/header.njk
+++ b/site/_includes/components/header.njk
@@ -3,7 +3,7 @@
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="/assets/logo.png" width="40" height="40" alt="the logo of the site" class="d-inline-block align-text-top">
-        Sven Digital
+        {{ generic.siteTitle }}
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
