--- a/site/_includes/components/navOffCanvas.njk
+++ b/site/_includes/components/navOffCanvas.njk
@@ -1,6 +1,6 @@
 <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
 <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Sven Digital</h5>
+    <h5 class="offcanvas-title" id="offcanvasNavbar2Label">{{ generic.siteTitle }}</h5>
     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 </div>
 <div class="offcanvas-body">
