--- a/site/_includes/layouts/baseLayout.njk
+++ b/site/_includes/layouts/baseLayout.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Digital Sven</title>
+    <title>{{ generic.siteTitle }}</title>
     <link href="main.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
   </head>
