added about page and version etc

--- a/site/_includes/layouts/baseLayout.njk
+++ b/site/_includes/layouts/baseLayout.njk
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ generic.siteTitle }}</title>
-    <link href="main.css" rel="stylesheet">
+    <link href="/main.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
   </head>
 <body>
   {{ content | safe }}  
-  <script src="main.js"></script>
+  <script src="/main.js"></script>
 </body> 
 </html>
