--- a/site/_includes/components/footer.njk
+++ b/site/_includes/components/footer.njk
@@ -1,6 +1,7 @@
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <p class="col-md-4 mb-0 text-body-secondary">© {{generic.buildYear}} {{ generic.siteTitle }}</p>
+    
 
     <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
       <img src="/assets/logo.png" width="60" height="60" alt="the logo of the site">
@@ -13,5 +14,6 @@
       <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
     </ul>
+    <p class="col-md-4 mb-0 text-body-secondary">V{{generic.version}}, build Date: {{generic.fullDate}}</p>
   </footer>
 </div>
