updating about page custom stuff

--- a/site/about.njk
+++ b/site/about.njk
@@ -2,6 +2,31 @@
 layout: layouts/defaultLayout.njk
 myOtherData: hello
 ---
+<main>
+    <div class="container-fluid bg-custom-gradient">
+        <div class="container text-center pt-4"><h1 class="display-1">Sven van Straalen</h1></div>
+    </div>
+  <div class="container shadow-sm mt-n5 bg-body rounded">
+    <div class="text-center">
+        <img src="/assets/Sven-2.jpg" style="max-width: 200px;" class="rounded mt-n5 shadow-sm" alt="...">
+    </div>
+    bla <br/>
+    bla <br/>
 
+    bla <br/>
 
-<p> whuut lol </p>
+    bla <br/>
+    bla <br/>
+
+    bla <br/>
+    bla <br/>
+
+    bla <br/>
+
+    bla <br/>
+
+    bla <br/>
+    bla <br/>
+    bla <br/>
+  </div>
+</main>
