--- a/site/about.njk
+++ b/site/about.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/defaultLayout.njk
-myOtherData: hello
+menuActive: about
 ---
 <main>
   <div class="container-fluid bg-custom-gradient">
