--- a/site/_includes/components/footer.njk
+++ b/site/_includes/components/footer.njk
@@ -8,11 +8,11 @@
     </a>
 
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
+      <li class="nav-item"><a href="/tech/" class="nav-link px-2 text-body-secondary">Tech</a></li>
+      <li class="nav-item"><a href="/photo/" class="nav-link px-2 text-body-secondary">Photo</a></li>
+      <li class="nav-item"><a href="/music/" class="nav-link px-2 text-body-secondary">Music</a></li>
+      <li class="nav-item"><a href="/about/" class="nav-link px-2 text-body-secondary">About</a></li>
     </ul>
     <p class="col-md-4 mb-0 text-body-secondary">V{{generic.version}}, build Date: {{generic.fullDate}}</p>
   </footer>
