--- a/site/_includes/components/navOffCanvas.njk
+++ b/site/_includes/components/navOffCanvas.njk
@@ -6,11 +6,48 @@
 <div class="offcanvas-body">
     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
     <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        {% if menuActive == 'home' %}
+            <a class="nav-link  active" aria-current="page" href="/">Home</a>
+        {% else %}
+            <a class="nav-link" href="/">Home</a>
+        {% endif %}
     </li>
     <li class="nav-item">
+        {% if menuActive == 'tech' %}
+            <a class="nav-link  active" aria-current="page" href="/tech/">Tech</a>
+        {% else %}
+            <a class="nav-link" href="/tech/">Tech</a>
+        {% endif %}
+    </li>
+    <li class="nav-item">
+        {% if menuActive == 'photo' %}
+            <a class="nav-link  active" aria-current="page" href="/photo/">Photo</a>
+        {% else %}
+            <a class="nav-link" href="/photo/">Photo</a>
+        {% endif %}
+    </li>
+    <li class="nav-item">
+        {% if menuActive == 'music' %}
+            <a class="nav-link  active" aria-current="page" href="/music/">Music</a>
+        {% else %}
+            <a class="nav-link" href="/music/">Music</a>
+        {% endif %}
+    </li>
+    <li class="nav-item">
+        {% if menuActive == 'about' %}
+            <a class="nav-link  active" aria-current="page" href="/about/">About</a>
+        {% else %}
+            <a class="nav-link" href="/about/">About</a>
+        {% endif %}
+    </li>
+        {# Might be usefull for later 
+    <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Link</a>
         <a class="nav-link" href="#">Link</a>
     </li>
+
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Dropdown
@@ -23,11 +60,11 @@
         </li>
         <li><a class="dropdown-item" href="#">Something else here</a></li>
         </ul>
-    </li>
+    </li> #}
     </ul>
-    <form class="d-flex mt-3 mt-lg-0" role="search">
+    {# <form class="d-flex mt-3 mt-lg-0" role="search">
     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
+    </form> #}
 </div>
 </div>
