a bunch of stuff

--- a/site/_includes/layouts/blogSidebar.njk
+++ b/site/_includes/layouts/blogSidebar.njk
@@ -3,12 +3,11 @@ layout: layouts/defaultLayout.njk
 myOtherData: hello
 ---
 <main class="container pt-2">
-  <div class="row g-5">
+  <div class="row">
     <div class="col-md-8">
       <h1 class="pb-4 mb-4 fst-italic border-bottom">
         {{title}}
       </h1>
-
       <article class="blog-post">
         {{ content | safe }}
       </article>
