bunch of changes

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,6 @@
 $enable-negative-margins: true;
 @import "bootstrap/scss/bootstrap";
+@import "starfield";
 
 .bg-custom-gradient{
     background: rgb(206,89,196);
