--- a/site/index.njk
+++ b/site/index.njk
@@ -2,6 +2,16 @@
 layout: layouts/defaultLayout.njk
 menuActive: home
 ---
+<main class="container-fluid p-0">
+    <div class="bg-dark d-flex w-100 min-vh-100 mx-auto justify-content-center align-items-center text-white position-relative">
+        <div class="gradient"></div>
+        <div class="p-5 z-1 position-absolute">
+            <h1 class="">Welcome to the digital world of Sven</h1>
 
+        </div>
+        
+        
+        
+    </div>
 
-<p> whuut lol </p>
+</main>
