sticky the navbar or actually tha header

--- a/site/index.njk
+++ b/site/index.njk
@@ -6,12 +6,8 @@ menuActive: home
     <div class="bg-dark d-flex w-100 min-vh-100 mx-auto justify-content-center align-items-center text-white position-relative">
         <div class="gradient"></div>
         <div class="p-5 z-1 position-absolute">
-            <h1 class="">Welcome to the digital world of Sven</h1>
-
-        </div>
-        
-        
-        
+            <h1 class="">Welcome to the world of Digital Sven</h1>
+        </div> 
     </div>
 
 </main>
