--- a/site/photo/index.njk
+++ b/site/photo/index.njk
@@ -3,5 +3,13 @@ layout: layouts/defaultLayout.njk
 menuActive: photo
 ---
 
-
-<p> Photo page </p>
+<main class="container pt-2">
+    <div class="row">
+        <div class="col-md-8">
+            <h1 class="pb-4 mb-4 fst-italic border-bottom">
+                Photo
+            </h1>
+            Work in progress :D 
+        {% include 'components/sidebar.njk' %}
+    </div>
+</main>
