--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,7 @@
 $enable-negative-margins: true;
 @import "bootstrap/scss/bootstrap";
 @import "starfield";
+@import "prism";
 
 .bg-custom-gradient{
     background: rgb(206,89,196);
