--- a/site/index.njk
+++ b/site/index.njk
@@ -2,12 +2,76 @@
 layout: layouts/defaultLayout.njk
 menuActive: home
 ---
-<main class="container-fluid p-0">
-    <div class="bg-dark d-flex w-100 min-vh-100 mx-auto justify-content-center align-items-center text-white position-relative">
-        <div class="gradient"></div>
-        <div class="p-5 z-1 position-absolute">
-            <h1 class="">Welcome to the world of Digital Sven</h1>
-        </div> 
-    </div>
 
+<main>
+    <div class="container-fluid p-0">
+        <div class="bg-dark d-flex w-100 min-vh-100 mx-auto justify-content-center align-items-center text-white position-relative">
+            <div class="gradient"></div>
+            <div class="p-5 z-1 position-absolute">
+                <h1 class="">Welcome to the world of Digital Sven</h1>
+            </div>
+        </div>
+    </div>
+    <div class="container pt-3">
+        <h2>Tech</h2>
+        <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
+            <div class="col-lg-6 px-0">
+                <h1 class="display-4 fst-italic">{{collections.techSortByDate[0].data.title}}</h1>
+                <p class="lead my-3">{{collections.techSortByDate[0].data.featuredText}}</p>
+                <p class="lead mb-0">
+                    <a href="{{collections.techSortByDate[0].url}}" class="text-body-emphasis fw-bold">Continue reading...</a>
+                </p>
+            </div>
+        </div>
+        <div class="row mb-2">
+            <div class="col-md-6">
+                <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <h3 class="mb-0">{{collections.techSortByDate[1].data.title}}</h3>
+                        <div class="mb-1 text-body-secondary">Nov 12</div>
+                        <p class="card-text mb-auto">{{collections.techSortByDate[1].data.featuredText}}</p>
+                        <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+                            Continue reading
+                            <svg class="bi">
+                                <use xlink:href="#chevron-right"></use>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="col-auto d-none d-lg-block">
+                        <img src="{{collections.techSortByDate[1].data.thumb}}" width="200" height="250" class="bd-placeholder-img" alt="{{collections.techSortByDate[1].data.featuredIMGALT}}">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <h3 class="mb-0">Post title</h3>
+                        <div class="mb-1 text-body-secondary">Nov 11</div>
+                        <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+                            Continue reading
+                            <svg class="bi">
+                                <use xlink:href="#chevron-right"></use>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="col-auto d-none d-lg-block">
+                        <svg
+                            class="bd-placeholder-img"
+                            width="200"
+                            height="250"
+                            xmlns="http://www.w3.org/2000/svg"
+                            role="img"
+                            aria-label="Placeholder: Thumbnail"
+                            preserveaspectratio="xMidYMid slice"
+                            focusable="false">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#55595c"></rect>
+                            <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
