have to find a better way to store my images :D

--- a/site/photo/index.njk
+++ b/site/photo/index.njk
@@ -9,7 +9,41 @@ menuActive: photo
             <h1 class="pb-4 mb-4 fst-italic border-bottom">
                 Photo
             </h1>
-            Work in progress :D 
+            <div class="gallery">
+                <div class="gallery-sizer"></div>
+                <div class="gallery-gutter-sizer"></div>
+                <div class="gallery-item">
+                    {% image "site/assets/photo/gallery/_DSC3389.JPG", "Cow watching a nice view", "(min-width: 30em) 50vw, 100vw", true %}
+                </div>
+                <div class="gallery-item">
+                    {% image "site/assets/photo/gallery/_DSC4614_optimized.jpg", "Starling(bird) looking out of its nest", "(min-width: 30em) 50vw, 100vw", true %}
+                </div>
+                <div class="gallery-item">
+                    {% image "site/assets/photo/gallery/INSTA_DSC5625.jpg", "In Berlin a castle", "(min-width: 30em) 50vw, 100vw", true %}
+                </div>
+                <div class="gallery-item">
+                    {% image "site/assets/photo/gallery/insta_DSC5339.jpg", "Berlin wall streed art", "(min-width: 30em) 50vw, 100vw", true %}
+                </div>
+                <div class="gallery-item">
+                    {% image "site/assets/photo/gallery/insta_DSC5119.jpg", "Dramatic view holocaust monument", "(min-width: 30em) 50vw, 100vw", true %}
+                </div>
+                <div class="gallery-item">
+                    {% image "site/assets/photo/gallery/DSC02919.jpg", "Icy water flowing down", "(min-width: 30em) 50vw, 100vw", true %}
+                </div>
+                <div class="gallery-item">
+                    {% image "site/assets/photo/gallery/DSC02883.jpg", "Snowy mountains with sunset", "(min-width: 30em) 50vw, 100vw", true %}
+                </div>
+                <div class="gallery-item">
+                    {% image "site/assets/photo/gallery/DSC02867.jpg", "Snowy mountains", "(min-width: 30em) 50vw, 100vw", true %}
+                </div>
+                <div class="gallery-item">
+                    {% image "site/assets/photo/gallery/DSC02864_edit.jpg", "Snowy mountain where the peak is lit by sunlight", "(min-width: 30em) 50vw, 100vw", true %}
+                </div>
+                <div class="gallery-item">
+                    {% image "site/assets/photo/gallery/meSnow.jpg", "Me making a picture from a mountain", "(min-width: 30em) 50vw, 100vw", true %}
+                </div>
+            </div>
+        </div>
         {% include 'components/sidebar.njk' %}
     </div>
 </main>
