--- a/site/index.njk
+++ b/site/index.njk
@@ -28,9 +28,8 @@ menuActive: home
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
                         <h3 class="mb-0">{{collections.techSortByDate[1].data.title}}</h3>
-                        <div class="mb-1 text-body-secondary">Nov 12</div>
                         <p class="card-text mb-auto">{{collections.techSortByDate[1].data.featuredText}}</p>
-                        <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+                        <a href="{{collections.techSortByDate[1].url}}" class="icon-link gap-1 icon-link-hover stretched-link">
                             Continue reading
                             <svg class="bi">
                                 <use xlink:href="#chevron-right"></use>
@@ -45,10 +44,9 @@ menuActive: home
             <div class="col-md-6">
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <h3 class="mb-0">Post title</h3>
-                        <div class="mb-1 text-body-secondary">Nov 11</div>
-                        <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+                        <h3 class="mb-0">{{collections.techSortByDate[2].data.title}}</h3>
+                        <p class="card-text mb-auto">{{collections.techSortByDate[2].data.featuredText}}</p>
+                        <a href="{{collections.techSortByDate[2].url}}" class="icon-link gap-1 icon-link-hover stretched-link">
                             Continue reading
                             <svg class="bi">
                                 <use xlink:href="#chevron-right"></use>
@@ -56,19 +54,7 @@ menuActive: home
                         </a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <svg
-                            class="bd-placeholder-img"
-                            width="200"
-                            height="250"
-                            xmlns="http://www.w3.org/2000/svg"
-                            role="img"
-                            aria-label="Placeholder: Thumbnail"
-                            preserveaspectratio="xMidYMid slice"
-                            focusable="false">
-                            <title>Placeholder</title>
-                            <rect width="100%" height="100%" fill="#55595c"></rect>
-                            <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                        </svg>
+                        <img src="{{collections.techSortByDate[2].data.thumb}}" width="200" height="250" class="bd-placeholder-img" alt="{{collections.techSortByDate[2].data.featuredIMGALT}}">
                     </div>
                 </div>
             </div>
