--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,6 +2,7 @@ $enable-negative-margins: true;
 @import "bootstrap/scss/bootstrap";
 @import "starfield";
 @import "prism";
+@import "gallery";
 
 .bg-custom-gradient{
     background: rgb(206,89,196);
