--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -13,7 +13,7 @@
     width: 1%;
 }
 
-@include media-breakpoint-down(md) { 
+@include media-breakpoint-up(md) { 
     .gallery-item, .gallery-sizer {
         width: 47.333%;
     }
