--- a/site/_includes/components/navOffCanvas.njk
+++ b/site/_includes/components/navOffCanvas.njk
@@ -30,13 +30,13 @@
                     <a class="nav-link" href="/photo/">Photo</a>
                 {% endif %}
             </li>
-            <li class="nav-item">
+            {# <li class="nav-item">
                 {% if menuActive == 'music' %}
                     <a class="nav-link  active" aria-current="page" href="/music/">Music</a>
                 {% else %}
                     <a class="nav-link" href="/music/">Music</a>
                 {% endif %}
-            </li>
+            </li> #}
             <li class="nav-item">
                 {% if menuActive == 'about' %}
                     <a class="nav-link  active" aria-current="page" href="/about/">About</a>
